--- a/PlanTechShenApp.Android/PlanTechShenApp.Android.csproj
+++ b/PlanTechShenApp.Android/PlanTechShenApp.Android.csproj
@@ -102,5 +102,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\contact.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\check.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\plus.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
