--- a/PlanTechShenApp.Android/PlanTechShenApp.Android.csproj
+++ b/PlanTechShenApp.Android/PlanTechShenApp.Android.csproj
@@ -108,5 +108,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\plus.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\chat.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
