--- a/PlanTechShenApp/PlanTechShenApp.csproj
+++ b/PlanTechShenApp/PlanTechShenApp.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microcharts.Forms" Version="0.9.5.9" />
+    <PackageReference Include="nanoFramework.System.Net.Http.Client" Version="1.4.0.23" />
     <PackageReference Include="NEST" Version="7.17.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NuGet.Common" Version="6.2.1" />
