--- a/PlanTechShenApp/PlanTechShenApp.csproj
+++ b/PlanTechShenApp/PlanTechShenApp.csproj
@@ -22,14 +22,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microcharts.Forms" Version="0.9.5.9" />
-    <PackageReference Include="nanoFramework.System.Net.Http.Client" Version="1.4.0.23" />
     <PackageReference Include="NEST" Version="7.17.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NuGet.Common" Version="6.2.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2478" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
-  </ItemGroup>
+<PackageReference Include="Xamarin.CommunityToolkit" Version="2.0.4" />
+	</ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="Community\ClientSupportPage.xaml">
@@ -45,6 +45,9 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\CommunityPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\ForgotPasswordPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\PlantListPage.xaml">
