--- a/PlanTechShenWebApi/appsettings.json
+++ b/PlanTechShenWebApi/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PlanTechConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Plantechdb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
+  }
 }
